feat: inputs and documentation

--- a/src/stories/Libraries.stories.mdx
+++ b/src/stories/Libraries.stories.mdx
@@ -1,7 +1,6 @@
-<Meta title="Documentación/Librerías" />
+<Meta title="Librerías" />
 
 # Resumen Librerías Utilizadas 🎨
-
 
 ## [@CSS/Styles](https://gitlab.falabella.com/tech-corp/enterprise-support/finance-management/treasury/scc/gcp/frontend/styles)
 _Esta librería es el core del proyecto, basada en [flexbox](https://css-tricks.com/snippets/css/a-guide-to-flexbox/) y orientada a componentes como Bootstrap o Bulma._
