--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -8,6 +8,6 @@ Esta funcionalidad le proporcionará la siguiente ayuda:
 
 2.- Mejorar la comunicación entre UI-UX Designers y Front-End Developers.
 
-3.- Servir de documentación.
+3.- Servir de fuente de fuente de la verdad sobre los componentes que se deben incorporar a mockups y web-portal.
 
-Busque UI Components de ejemplo navegando en la barra lateral. Vea su código en el directorio src/components para saber cómo funcionan. El código lo puede encontrar en [este repositorio](https://github.com/cgonzalezm1234/storybook)
+Busque UI Components de ejemplo navegando en la barra lateral. Vea su código en el directorio src/components para saber cómo funcionan. El código lo puede encontrar en [este repositorio](https://gitlab.falabella.com/tech-corp/enterprise-support/finance-management/treasury/scc/poc/frontend/poc-react-storybook)
